Finishes in-class version of this game

--- a/public/test.html
+++ b/public/test.html
@@ -7,9 +7,17 @@
 <body>
   
   <div class="end-message">
-    You got eated! You stayed alive for... 
-    <span id="scoreText" class="scoreText"></span> seconds
-    <button id="restartButton"> Restart Game </button>
+    <div class="vertical-center">
+      <div class="message-title">You got eated!</div>
+
+      <div class="message-score">
+        You earned 
+        <span id="scoreText" class="scoreText"></span> 
+        points
+      </div>
+
+      <button class="message-button" id="restartButton"> Restart Game </button>
+    </div>
   </div>
 
   <div class="game-container">
